[tool.poetry]
name = "doltpy_integrations"
version = "0.1.0"
description = ""
authors = ["Max Hoffman <max@dolthub.com>"]

[tool.poetry.dependencies]
python = "^3.7"
#doltpy = "^1.1.10"
metaflow = "^2.2.6"
doltpy = {path = "../doltpy"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
mypy = "^0.800"
ipython = "^7.19.0"
pytest-cov = "^2.11.1"
chartify = "^3.0.3"
altair = "^4.1.0"
altair_saver = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
