[tool.poetry]
name = "dolt_integrations"
version = "0.1.0"
description = ""
authors = ["Max Hoffman <max@dolthub.com>"]

[tool.poetry.dependencies]
python = "^3.7"
metaflow = "^2.2.6"
doltcli = "^0.1.4"
pandas = ">=1.0.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
mypy = "^0.800"
ipython = "^7.19.0"
pytest-cov = "^2.11.1"
chartify = "^3.0.3"
altair = "^4.1.0"
altair_saver = "^0.5.0"
tensorflow = {extras = ["keras"], version = "^2.4.1"}
absl-py = "^0.12.0"
opt_einsum = "^3.3.0"
astunparse = "^1.6.3"
termcolor = "^1.1.0"
flatbuffers = "^1.12"
keras = "^2.4.3"
keras_preprocessing = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
