[tool.poetry]
name = "dolt_integrations"
version = "0.1.2"
description = ""
authors = ["Max Hoffman <max@dolthub.com>", "Oscar Batori <oscar@dolthub.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
pandas = ">=0.25.2"
dataclasses_json = "^0.5.3"
doltcli = "^0.1.6"
metaflow = { version = "^2.2.6", optional = true }

[tool.poetry.extras]
metaflow = ["metaflow"]

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
mypy = "^0.800"
pytest-cov = "^2.11.1"
metaflow = "^2.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
